Fix assert when changing layer's blending mode too quickly

The blending mode is updated asynchronously, so at the point
of creation of undo command we may not know the current value
of the layer's composite op. We should read it during the first
redo execution.

BUG:434601